force-app/main/default/objects/PageElement__c/PageElement__c.object-meta.xml
<CustomObject>
    <label>Page Element</label>
    <nameField>
        <label>Page Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>