force-app/main/default/objects/PageElement__c/fields/Element__c.field-meta.xml
<CustomField>
    <fullName>Element__c</fullName>
    <label>Element</label>
    <referenceTo>Element__c</referenceTo>
    <relationshipLabel>Related Pages</relationshipLabel>
    <relationshipName>PageElements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>